@@ -17,7 +17,9 @@ New Features:
 - XML Actions iterate generates _index and _hasNext fields
 
 Bug Fixes:
-
+- Fixed issue in ListCondition with null list entries, and improved the
+  factory method with condition List parameter when List has only one
+  condition to just use that condition
 
 ===========================================================================
 Release 1.3.1 - 20 Oct 2013
